BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/CRM_InfoPog__c.object-meta.xml
<CustomObject>
    <description>Oggetto che raccoglie le informazioni dei questionari POG compilati dai clienti
Object that collects information from POG questionnaires completed by customers</description>
    <label>Info Pog</label>
    <nameField>
        <displayFormat>Pog-{00000000}</displayFormat>
        <label>Info Pog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Info Pogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>