BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <description>DWH: Concat(ISTITUTO_CD&amp;&quot;_&quot;&amp;NDG_CD)</description>
    <inlineHelpText>Account relativo al Pog</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Info Pogs</relationshipLabel>
    <relationshipName>Info_Pogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>