BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_DataCompilazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataCompilazione__c</fullName>
    <description>DWH: COMPILAZIONE_DT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data Compilazione questionario POG</inlineHelpText>
    <label>Data Compilazione</label>
    <type>Date</type>
</CustomField>