BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_DataScadenza__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataScadenza__c</fullName>
    <description>DWH: SCADENZA_DT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data di scadenza del Pog</inlineHelpText>
    <label>Data Scadenza</label>
    <type>Date</type>
</CustomField>