BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_Domanda10__c.field-meta.xml
<CustomField>
    <fullName>CRM_Domanda10__c</fullName>
    <description>DWH: DOMANDA_10_DS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Domanda 10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>