BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_Domanda12__c.field-meta.xml
<CustomField>
    <fullName>CRM_Domanda12__c</fullName>
    <description>DWH: DOMANDA_12_DS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Domanda 12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>