BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_FasciaPog__c.field-meta.xml
<CustomField>
    <fullName>CRM_FasciaPog__c</fullName>
    <description>DWH: FASCIA_POG_CD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fascia Pog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>