BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_IdProfilazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_IdProfilazione__c</fullName>
    <description>DWH: ID_PROFILAZIONE_CD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Id Profilazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>