BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_Risposta11__c.field-meta.xml
<CustomField>
    <fullName>CRM_Risposta11__c</fullName>
    <description>DWH: RISPOSTA_11_DS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Risposta 11</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>