BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/CRM_TipoFasciaPog__c.field-meta.xml
<CustomField>
    <fullName>CRM_TipoFasciaPog__c</fullName>
    <description>DWH: TIPO_FASCIA_POG_CD</description>
    <label>Tipo Fascia Pog</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Elevata_Protezione</fullName>
                <label>Elevata Protezione</label>
            </value>
            <value>
                <fullName>Esperta</fullName>
            </value>
            <value>
                <fullName>Normale</fullName>
            </value>
            <value>
                <fullName>Specialistica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>