BPER/DEVF/force-app/main/default/objects/CRM_InfoPog__c/fields/NDW_X_Update_TS__c.field-meta.xml
<CustomField>
    <fullName>NDW_X_Update_TS__c</fullName>
    <description>DWH: X_UPDATE_TS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>X_Update_TS</label>
    <type>DateTime</type>
</CustomField>